Final style update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h3 class="team-name">Cheers'Bro</h3>
                     <p class="team-founded">Fondé en 2019</p>
                     <p class="team-description">Notre objectif est clair : rejoindre l'élite du championnat, viser toujours plus haut, et hisser les Cheers' Bros parmi les meilleures équipes de Genève.</p>
-                    <a href="#cheers-bro" class="team-more-link">More →</a>
+                    <a href="#cheers-bro" class="team-more-link">Plus d'infos →</a>
                 </div>
             </div>
 
@@ -51,7 +51,7 @@
                     <h3 class="team-name">Bros'N'Darts</h3>
                     <p class="team-founded">Lancés en 2025</p>
                     <p class="team-description">Les Bros'n'darts sont une jeune équipe enthousiaste, constituée majoritairement de joueurs amateurs, mais animée par la même passion que leurs aînés.</p>
-                    <a href="#bros-n-darts" class="team-more-link">More →</a>
+                    <a href="#bros-n-darts" class="team-more-link">Plus d'infos →</a>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
          </div>
      </section>
 
-     <section id="bros-n-darts" class="team-section">
+     <section id="bros-n-darts" class="team-section bros-section">
          <div class="team-content">
              <div class="team-header-section">
                 <img src="assets/img/logo brosndarts 3.png" alt="Cheers'Bro Logo" class="team-logo" id="teamLogo">
@@ -106,7 +106,7 @@
          </div>
      </section>
 
-     <section id="partners" class="team-section">
+     <section id="partners" class="team-section partners-section">
         <div class="team-content">
             <div class="team-header-section">
                
@@ -129,18 +129,21 @@
                 </div>
 
                 <div class="team-story">
-                    <img src="assets/img/sponsors/chefs-de-secteurs-logo.png" alt="chefs de secteurs logo" class="team-logo" id="chefs-de-secteurs-logo">
-                </div>
-
-                <div class="team-story">
                     <img src="assets/img/sponsors/mtnr-concept-logo.png" alt="MTNR Concept logo" class="team-logo" id="mtnr-logo">
                 </div>
 
-            </div>
-        </div>
-    </section>
+                         </div>
+         </div>
+     </section>
 
-                 <script>
+     <!-- Footer -->
+     <footer class="footer">
+         <div class="footer-content">
+             <p>Designed by <a href="https://antarctic-design.co.uk/" target="_blank" rel="noopener noreferrer">E. Maguire, Antarctic Design</a></p>
+         </div>
+     </footer>
+
+                  <script>
         // Header logo click to scroll to top
         document.querySelector('.logo').addEventListener('click', function(e) {
             e.preventDefault();
