--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
     <div class="sidebar">
         <a href="https://www.genevadarts.ch" target="_blank">Geneva Darts League</a>
+        <a href="#events">Evènements</a>
         <a href="#partners">Partenaires</a>
     </div>
 
@@ -238,6 +239,14 @@
          </div>
      </section>
 
+    <section id="events" class="team-section events-section">
+        <div class="team-content">
+            <div class="team-header-section">
+                <h2>Evènements</h2>
+            </div>
+         </div>
+     </section>
+
      <section id="partners" class="team-section partners-section">
         <div class="team-content">
             <div class="team-header-section">
@@ -267,6 +276,8 @@
                          </div>
          </div>
      </section>
+
+    
 
      <!-- Footer -->
      <footer class="footer">
@@ -302,6 +313,13 @@
         document.querySelector('a[href="#partners"]').addEventListener('click', function(e) {
             e.preventDefault();
             document.getElementById('partners').scrollIntoView({ 
+                behavior: 'smooth' 
+            });
+        });
+
+        document.querySelector('a[href="#events"]').addEventListener('click', function(e) {
+            e.preventDefault();
+            document.getElementById('events').scrollIntoView({ 
                 behavior: 'smooth' 
             });
         });
