--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <a href="https://www.genevadarts.ch" target="_blank">Geneva Darts League</a>
         <a href="#events">Evènements</a>
         <a href="#partners">Partenaires</a>
+        <a href="https://www.instagram.com/cheers.bro_darts.ch/" target="_blank">Instagram</a>
     </div>
 
     <div id="home" class="container">
